feat: https client support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
-  "name": "mini-http",
+  "name": "@ecactus/mini-http",
+  "type": "module",
   "version": "0.0.2",
   "description": "a very tiny, very fragile http server. you shouldn't use this",
   "scripts": {
